// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`OpenchannelThumbnailMessage should do a snapshot test of the OpenchannelThumbnailMessage DOM 1`] = `
<DocumentFragment>
  <div
    class=" sendbird-openchannel-thumbnail-message"
    data-testid="sendbird-openchannel-thumbnail-message"
  >
    <div
<<<<<<< HEAD
      className="sendbird-context-menu"
      style={
        Object {
          "display": "inline",
        }
      }
=======
      class="sendbird-openchannel-thumbnail-message__left"
>>>>>>> b926af1 (Migrate tests of ui/OpenchannelThumbnailMessage with testing-library)
    >
      <div
        class="sendbird-context-menu"
      >
        <div
          class="sendbird-openchannel-thumbnail-message__left__avatar sendbird-avatar"
          role="button"
          style="height: 28px; width: 28px;"
          tabindex="0"
        >
          <div
            class="sendbird-avatar-img sendbird-image-renderer"
            style="width: 100%; min-width: 28px; max-width: 400px; height: 28px;"
          >
            <div
              class="sendbird-image-renderer__image"
              style="width: 100%; min-width: 28px; max-width: 400px; height: 28px; position: absolute; background-repeat: no-repeat; background-position: center; background-size: cover; background-image: url(https://static.sendbird.com/sample/profiles/profile_15_512px.png);"
            />
            <img
              alt=""
              class="sendbird-image-renderer__hidden-image-loader"
              src="https://static.sendbird.com/sample/profiles/profile_15_512px.png"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sendbird-openchannel-thumbnail-message__right"
    >
      <div
        class="sendbird-openchannel-thumbnail-message__right__title"
      >
        <span
          class="sendbird-openchannel-thumbnail-message__right__title__sender-name sendbird-label sendbird-label--caption-2 sendbird-label--color-onbackground-2"
          data-testid="sendbird-label"
        >
          hoon102
        </span>
        <span
          class="sendbird-openchannel-thumbnail-message__right__title__sent-at sendbird-label sendbird-label--caption-3 sendbird-label--color-onbackground-3"
          data-testid="sendbird-label"
        >
          mock-date
        </span>
      </div>
      <div
        class="sendbird-openchannel-thumbnail-message__right__body"
      >
        <div
          class="sendbird-openchannel-thumbnail-message__right__body__wrap"
          role="button"
          tabindex="0"
        >
          <div
            class="sendbird-openchannel-thumbnail-message__right__body__wrap__overlay"
          />
          <div
            class="sendbird-openchannel-thumbnail-message__right__body__wrap__image sendbird-image-renderer"
            style="width: 100%; min-width: -80px; max-width: 400px; height: 270px;"
          >
            <div
              style="width: 100%; min-width: -80px; max-width: 400px; height: 270px; position: absolute; display: flex; justify-content: center; align-items: center;"
            >
              <div
                class=" sendbird-icon sendbird-icon-photo sendbird-icon-color--on-background-2"
                role="button"
                style="width: 56px; min-width: 56px; height: 56px; min-height: 56px;"
                tabindex="0"
              >
                <test-file-stub />
              </div>
            </div>
            <div
              class="sendbird-image-renderer__image"
              style="width: 100%; min-width: -80px; max-width: 400px; height: 270px; position: absolute; background-repeat: no-repeat; background-position: center; background-size: cover; background-image: url(https://sendbird-staging.s3.amazonaws.com/26FA710D-A7F6-4483-ABEA-1F07A07A112E/upload/n/e49e0a4111d4445a8840bd51f3c9d933.png);"
            />
            <img
              alt="image"
              class="sendbird-image-renderer__hidden-image-loader"
              src="https://sendbird-staging.s3.amazonaws.com/26FA710D-A7F6-4483-ABEA-1F07A07A112E/upload/n/e49e0a4111d4445a8840bd51f3c9d933.png"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sendbird-openchannel-thumbnail-message__context-menu"
    >
      <div
        class="sendbird-context-menu"
      >
        <button
          class="sendbird-openchannel-thumbnail-message__context-menu--icon sendbird-iconbutton "
          style="height: 32px; width: 32px;"
          type="button"
        >
          <span
            class="sendbird-iconbutton__inner"
          >
            <div
              class=" sendbird-icon sendbird-icon-more sendbird-icon-color--content-inverse"
              role="button"
              style="width: 24px; min-width: 24px; height: 24px; min-height: 24px;"
              tabindex="0"
            >
              <test-file-stub />
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
<<<<<<< HEAD
  <div
    className="sendbird-openchannel-thumbnail-message__context-menu"
  >
    <div
      className="sendbird-context-menu"
      style={
        Object {
          "display": "inline",
        }
      }
    >
      <button
        className="sendbird-openchannel-thumbnail-message__context-menu--icon sendbird-iconbutton "
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        style={
          Object {
            "height": "32px",
            "width": "32px",
          }
        }
        type="button"
      >
        <span
          className="sendbird-iconbutton__inner"
        >
          <div
            className=" sendbird-icon sendbird-icon-more sendbird-icon-color--content-inverse"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            style={
              Object {
                "height": "24px",
                "minHeight": "24px",
                "minWidth": "24px",
                "width": "24px",
              }
            }
            tabIndex="0"
          >
            <test-file-stub />
          </div>
        </span>
      </button>
    </div>
  </div>
</div>
=======
</DocumentFragment>
>>>>>>> b926af1 (Migrate tests of ui/OpenchannelThumbnailMessage with testing-library)
`;

=======
>>>>>>> d0bd767 (Update snapshots)
exports[`ui/OpenchannelThumbnailMessage should do a snapshot test of the OpenchannelThumbnailMessage DOM 1`] = `
<DocumentFragment>
  <div
    class=" sendbird-openchannel-thumbnail-message"
    data-testid="sendbird-openchannel-thumbnail-message"
  >
    <div
      class="sendbird-openchannel-thumbnail-message__left"
    >
      <div
        class="sendbird-context-menu"
      >
        <div
          class="sendbird-openchannel-thumbnail-message__left__avatar sendbird-avatar"
          role="button"
          style="height: 28px; width: 28px;"
          tabindex="0"
        >
          <div
            class="sendbird-avatar-img sendbird-image-renderer"
            style="width: 100%; min-width: 28px; max-width: 400px; height: 28px;"
          >
            <div
              class="sendbird-image-renderer__image"
              style="width: 100%; min-width: 28px; max-width: 400px; height: 28px; position: absolute; background-repeat: no-repeat; background-position: center; background-size: cover; background-image: url(https://static.sendbird.com/sample/profiles/profile_15_512px.png);"
            />
            <img
              alt=""
              class="sendbird-image-renderer__hidden-image-loader"
              src="https://static.sendbird.com/sample/profiles/profile_15_512px.png"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sendbird-openchannel-thumbnail-message__right"
    >
      <div
        class="sendbird-openchannel-thumbnail-message__right__title"
      >
        <span
          class="sendbird-openchannel-thumbnail-message__right__title__sender-name sendbird-label sendbird-label--caption-2 sendbird-label--color-onbackground-2"
        >
          hoon102
        </span>
        <span
          class="sendbird-openchannel-thumbnail-message__right__title__sent-at sendbird-label sendbird-label--caption-3 sendbird-label--color-onbackground-3"
        >
          mock-date
        </span>
      </div>
      <div
        class="sendbird-openchannel-thumbnail-message__right__body"
      >
        <div
          class="sendbird-openchannel-thumbnail-message__right__body__wrap"
          role="button"
          tabindex="0"
        >
          <div
            class="sendbird-openchannel-thumbnail-message__right__body__wrap__overlay"
          />
          <div
            class="sendbird-openchannel-thumbnail-message__right__body__wrap__image sendbird-image-renderer"
            style="width: 100%; min-width: -80px; max-width: 400px; height: 270px;"
          >
            <div
              style="width: 100%; min-width: -80px; max-width: 400px; height: 270px; position: absolute; display: flex; justify-content: center; align-items: center;"
            >
              <div
                class=" sendbird-icon sendbird-icon-photo sendbird-icon-color--on-background-2"
                data-testid="sendbird-icon"
                role="button"
                style="width: 56px; min-width: 56px; height: 56px; min-height: 56px;"
                tabindex="0"
              >
                <test-file-stub />
              </div>
            </div>
            <div
              class="sendbird-image-renderer__image"
              style="width: 100%; min-width: -80px; max-width: 400px; height: 270px; position: absolute; background-repeat: no-repeat; background-position: center; background-size: cover; background-image: url(https://sendbird-staging.s3.amazonaws.com/26FA710D-A7F6-4483-ABEA-1F07A07A112E/upload/n/e49e0a4111d4445a8840bd51f3c9d933.png);"
            />
            <img
              alt="image"
              class="sendbird-image-renderer__hidden-image-loader"
              src="https://sendbird-staging.s3.amazonaws.com/26FA710D-A7F6-4483-ABEA-1F07A07A112E/upload/n/e49e0a4111d4445a8840bd51f3c9d933.png"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sendbird-openchannel-thumbnail-message__context-menu"
    >
      <div
        class="sendbird-context-menu"
      >
        <button
          class="sendbird-openchannel-thumbnail-message__context-menu--icon sendbird-iconbutton "
          style="height: 32px; width: 32px;"
          type="button"
        >
          <span
            class="sendbird-iconbutton__inner"
          >
            <div
              class=" sendbird-icon sendbird-icon-more sendbird-icon-color--content-inverse"
              data-testid="sendbird-icon"
              role="button"
              style="width: 24px; min-width: 24px; height: 24px; min-height: 24px;"
              tabindex="0"
            >
              <test-file-stub />
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
